# ctbc-payment-advisor

./: .env.example  .gitignore  README.md  cards_reference.md  gradio_app.py  main.py  mcp_config.json  pyproject.toml  requirements.txt
agent/: mcp_bridge.py  mcp_client.py  payment_agent.py  prompts.py
data/processed/: channels.json  fubon_cards.json  merged_cards.json
data/schemas/: card_schema.json
data/scraped/: microsite_deals.json
data/seed/: ctbc_cards_seed.json
mcp_server/: http_app.py  server.py
mcp_server/data/processed/: ctbc_cards.json  promotions.json
mcp_server/data/scraped/: card_features.json
mcp_server/tools/: compare.py  promotions.py  recommend.py  search.py
mcp_server/utils/: calculator.py  data_loader.py
scraper/: browser_extractor.js  card_feature_scraper.py  channel_mapper.py  ctbc_scraper.py  data_cleaner.py  merge.py  microsite_scraper.py  run.py
tests/: test_payment_agent.py  test_recommend_payment.py  test_search_by_channel.py  test_user_stories.py
